<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

<!--    <PreferenceCategory app:title="Basics">-->
<!--        <CheckBoxPreference-->
<!--            android:title="Checkbox Preference"-->
<!--            app:key="checkbox"-->
<!--            app:summary="Tap to Check if On or Off" />-->

<!--        <EditTextPreference-->
<!--            android:dialogTitle="Enter Text"-->
<!--            android:inputType="text"-->
<!--            android:title="EditText Preference"-->
<!--            app:key="text"-->
<!--            app:summary="Click to show a text entry dialog"-->
<!--            app:useSimpleSummaryProvider="true" />-->

<!--    </PreferenceCategory>-->

    <PreferenceCategory app:title="Settings">

        <ListPreference
            app:defaultValue="@string/dark_mode_def_value"
            app:entries="@array/dark_mode_entries"
            app:entryValues="@array/dark_mode_values"
            app:key="@string/dark_mode"
            app:title="@string/dark_mode"
            app:useSimpleSummaryProvider="true" />

<!--        <SwitchPreference-->
<!--            android:defaultValue="true"-->
<!--            android:summary="Click to Switch On or Off"-->
<!--            android:title="Switch Preference"-->
<!--            app:key="switch" />-->

        <Preference
            android:summary="This App is a 100% Free software developed and maintained by Giggle School of music and dance.The goal of this mobile app is to make information of Giggle  easy for everyone having a copy of this application."
            app:title="About Giggle Music Piano School">
<!--            <intent-->
<!--                android:action="com.bersyte.settingpreferences.SETTING_START_ACTIVITY"-->
<!--                android:targetClass="com.bersyte.settingpreferences.MainActivity"-->
<!--                android:targetPackage="com.bersyte.settingpreferences" />-->

        </Preference>

<!--        <Preference-->
<!--            android:summary="Click to Open my website"-->
<!--            app:title="Giggle Website">-->
<!--            <intent-->
<!--                android:action="android.intent.action.VIEW"-->
<!--                android:data="https://yawomessie.com" />-->
<!--        </Preference>-->

        <Preference
            android:summary="schoolgiggle@gmail.com"
            app:title="Contact Giggle">
<!--            <intent-->
<!--                android:action="android.intent.action.VIEW"-->
<!--                android:data="https://www.bersyte.com/" />-->
        </Preference>

        <Preference
            android:summary="Release version"
            app:title="1.0.1">
            <!--            <intent-->
            <!--                android:action="android.intent.action.VIEW"-->
            <!--                android:data="https://www.bersyte.com/" />-->
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>