<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_alignParentStart="true"
    android:layout_toStartOf="@id/cancel"
    android:background="@android:color/transparent"
    android:orientation="horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="It classes For Kids and Adults"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Information technology is used in every sphere of life like education, communication, business, commerce, treatment and banking etc. Businesses are investing heavily into new technological trends as well as offering businesses the chance to operate more effectively through the application of information technology."
                    android:textColor="@color/white"
                    android:textSize="16sp" />


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_height="250dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/it" />
                </androidx.cardview.widget.CardView>

                <com.gouravkhunger.accolib.widget.Accordion
                    android:id="@+id/accordion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="@string/animations"
                    app:text="@string/animations_description"
                    app:titleSize="18sp"
                    app:textSize="16sp"
                    app:titleColor="@android:color/white"
                    app:textColor="@android:color/darker_gray"/>




                <com.gouravkhunger.accolib.widget.Accordion
                    android:id="@+id/accordion4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="Typing Classes"
                    app:text="It's generally considered appropriate for kids to learn to type when their hands are big enough to fit comfortably on a standard keyboard, typically around 6 or 7 years of age. This also coincides with a period in which they are learning to read and write at school, and practicing their English spelling skills"
                    app:titleSize="18sp"
                    app:textSize="16sp"
                    app:titleColor="@android:color/white"
                    app:textColor="@android:color/darker_gray"/>


                <com.gouravkhunger.accolib.widget.Accordion
                    android:id="@+id/accordion5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="Google Apps Tutorials"
                    app:text="You can do a lot with a Google account these days, from using Google Drive to create and share documents, spreadsheets, and presentations to using Google Maps to learn your way around."
                    app:titleSize="18sp"
                    app:textSize="16sp"
                    app:titleColor="@android:color/white"
                    app:textColor="@android:color/darker_gray"/>

                <com.gouravkhunger.accolib.widget.Accordion
                    android:id="@+id/accordion6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="Best Online Teaching Apps for all learners"
                    app:text="Class at Giggle that provides all-inclusive solutions for online learning for kids and those who to go according to the trend in world of IT. ..."
                    app:titleSize="18sp"
                    app:textSize="16sp"
                    app:titleColor="@android:color/white"
                    app:textColor="@android:color/darker_gray"/>


                <com.gouravkhunger.accolib.widget.Accordion
                    android:id="@+id/accordion1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="@string/coding_class"
                    app:text="@string/web_development"
                    app:titleSize="18sp"
                    app:textSize="16sp"
                    app:titleColor="@android:color/white"
                    app:textColor="@android:color/darker_gray"/>


                <com.gouravkhunger.accolib.widget.Accordion
                    android:id="@+id/accordion2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="@string/java_coding_class"
                    app:text="@string/java_for_mobile"
                    app:titleSize="18sp"
                    app:textSize="16sp"
                    app:titleColor="@android:color/white"
                    app:textColor="@android:color/darker_gray"/>


                <com.gouravkhunger.accolib.widget.Accordion
                    android:id="@+id/accordion3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="@string/mobile_class"
                    app:text="@string/mobile_development"
                    app:titleSize="18sp"
                    app:textSize="16sp"
                    app:titleColor="@android:color/white"
                    app:textColor="@android:color/darker_gray"/>

                <com.gouravkhunger.accolib.widget.Accordion
                    android:id="@+id/accordion7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="Requirements"
                    app:text="Laptop or Desktop machine(That can be kept at Giggle space for the child) \n Internet \n Age required: 5 years and above."
                    app:titleSize="18sp"
                    app:textSize="16sp"
                    app:titleColor="@android:color/white"
                    app:textColor="@android:color/darker_gray"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">


<!--                    <Button-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:text="Call Giggle for more info"-->
<!--                        android:id="@+id/server_one"-->
<!--                        android:textAllCaps="false"-->
<!--                        android:layout_height="wrap_content"/>-->

<!--                    <Button-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:text="Chat with Giggle Agent"-->
<!--                        android:id="@+id/server_two"-->
<!--                        android:textAllCaps="false"-->
<!--                        android:layout_height="wrap_content"/>-->

<!--                    <Button-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:text="Send Email to Giggle"-->
<!--                        android:id="@+id/server_three"-->
<!--                        android:textAllCaps="false"-->
<!--                        android:layout_height="wrap_content"/>-->



                </LinearLayout>


            </LinearLayout>

            <ImageView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:padding="10dp"
                android:paddingLeft="0dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:src="@drawable/ic_close_black_24dp" />
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>